<?xml version="1.0"?>
<package format="3">
  <name>limbo</name>
  <version>2.1.0</version>
  <description>A lightweight framework for Gaussian processes and Bayesian optimization of black-box functions (C++-11)</description>

  <author>Antoine Cully</author>
  <author>Jean Baptiste Mouret</author>
  <author>Konstantinos Chatzilygeroudis</author>
  <author>Federico Allocati</author>

  <maintainer email="jean-baptiste.mouret@inria.fr">Jean Baptiste Mouret</maintainer>
  <license>CeCILL-C</license>

  <buildtool_depend>cmake</buildtool_depend>

  <build_depend>boost</build_depend>
  <build_depend>eigen</build_depend>
  <build_depend>tbb</build_depend>

  <!-- The following tags are recommended by REP-136 -->
  <exec_depend condition="$ROS_VERSION == 1">catkin</exec_depend>
  <exec_depend condition="$ROS_VERSION == 2">ament_cmake</exec_depend>

  <export>
    <!-- Specify that this is not really a Catkin package-->
    <build_type>cmake</build_type>
  </export>
</package>
